TOMEE-3879 - Adds missing --add-opens options to failover tests